# my-telegram-bot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  monitor-git-updates.sh  pyproject.toml  run-bot-dev.sh  run-bot.sh  setup-bot.sh  setup.cfg
docs/: garmin_analysis_implementation.md  garmin_data_analysis_framework.md  garmin_data_reference.md  plan_for_analysis_engine.md
telegram_bot/: __init__.py  config.py  main.py  service_factory.py  utils.py
telegram_bot/ai_assistant/: ai_assitant_agent.py  local_trace_exporter.py  model_factory.py
telegram_bot/ai_assistant/sub_agents/: obsidian_agent.py
telegram_bot/handlers/base/: private_handler.py  public_handler.py
telegram_bot/handlers/commands/: garmin_commands.py  list_drug_command.py  list_food_command.py
telegram_bot/handlers/conversations/: garmin_auth_conversation.py  garmin_export_conversation.py  log_drug_conversation.py  log_food_conversation.py
telegram_bot/handlers/messages/: __init__.py  default_message_handler.py  voice_message_handler.py
telegram_bot/service/: ai_assitant_service.py  background_task_executor.py  db_service.py  garmin_account_manager.py  garmin_connect_service.py  garmin_data_analysis_service.py  garmin_data_models.py  message_transcription_service.py
tests/: __init__.py
tests/data/garmin_data/: garmin_activities_2025-05-01.json  garmin_activities_between_2025-05-01_to_2025-05-01.json  (+25 more)
tests/scripts/: analyze_garmin_data.py  export_garmin_data.py  fetch_garmin_data.py  fetch_raw_garmin_data.py
tests/service/: test_garmin_connect_service.py
(+12 files in other folders)
